# mateus-image

./: .gitignore  CONFIG.md  Cargo.toml  README.md  build.py  hello.txt
src/: cli.rs  color.rs  config.rs  main.rs
src/filters/: ascii.rs  binary.rs  inversion.rs  mean.rs  median.rs  mod.rs  monochrome.rs  pixel.rs  stalinsort.rs  standard.rs
src/help/: config.txt  help.txt  main.txt
